feat: New Role Manager

--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -740,7 +740,7 @@
 
         </div>
         <div class="card-body">
-            {% if current_user.role.name == "Admin" or current_user.role.name == "Partner" %}
+            {% if current_user.role.name == "Admin" or current_user.role.name == "Partner" or current_user.role.name == "Manager" %}
             <div class="row">
                 <div class="col-lg-6 col-xl-6">
                     <div class="card mb-3 widget-content">
