feat: 2fd791675a364828b6b5106a12c857de(1)

--- a/prime_admin/templates/lms/fund_wallet/components/fund_wallet_statements.html
+++ b/prime_admin/templates/lms/fund_wallet/components/fund_wallet_statements.html
@@ -40,6 +40,7 @@
             <thead>
                 <tr>
                     <th class="text-center">DATE</th>
+                    <th class="text-center">CATEGORY</th>
                     <th class="text-center">DESCRIPTION</th>
                     <th class="text-center">SUPPLIER/STORE</th>
                     <th class="text-center">ADD FUNDS</th>
