fix: Sales to sales

--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -164,7 +164,7 @@
                     d.date_from = $("#filter_date_from").val();
                     d.date_to = $("#filter_date_to").val();
                     d.transaction_type = $("#filter_transaction_type").val();
-                    d.from_what = "Sales";
+                    d.from_what = "sales";
                 },
             }
         });
