--- a/prime_admin/templates/lms/pdfs/office_supplies_pdf.html
+++ b/prime_admin/templates/lms/pdfs/office_supplies_pdf.html
@@ -50,7 +50,7 @@
   <div style="text-align: center;">
     <h3 style="margin-bottom: 5px;">Prime Korean Language and Review Center Inc.</h3>
     <h6 style="font-weight:lighter;margin-top: 5px;">SEC. REG. NO.: CS201817522</h6>
-    <h5 style="font-weight:bold;margin-top: 10px;">AUDIT STUDENTS RECORD</h5>
+    <h5 style="font-weight:bold;margin-top: 10px;">Office Supplies Summary</h5>
   </div>
 
   <div style="text-align: center;">
